--- a/trunk/index.html
+++ b/trunk/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN//3.0">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <HTML>
  <HEAD>
   <TITLE>SNMP support for Perl 5</TITLE>
@@ -217,7 +217,7 @@ require 'SNMP_Session.pm';
 # which you want to talk to the agent.	Set port to the UDP
 # port on which the agent listens (usually 161).
 
-$session = SNMP_Session->open ($host, $community, $port)
+$session = SNMP_Session-&gt;open ($host, $community, $port)
     || die "couldn't open SNMP session to $host";
 
 # Set $oid1, $oid2... to the BER-encoded OIDs of the MIB
@@ -293,7 +293,7 @@ sub walk_function ($$$) {
 
 ...
 $columns = [$base_oid1, $base_oid3];
-$n_rows = $session->map_table ($columns, \&walk_function);
+$n_rows = $session->map_table ($columns, \&amp;walk_function);
 </pre>
 
 <p> The <em>columns</em> argument must be a reference to a list of
@@ -312,7 +312,7 @@ $n_rows = $session->map_table ($columns, \&walk_function);
  the following idiom:
 
 <pre>
-  grep (defined $_ && ($_=pretty_print $_), ($val1, $val3));
+  grep (defined $_ &amp;&amp; ($_=pretty_print $_), ($val1, $val3));
 </pre>
 
 </ol>
@@ -352,7 +352,7 @@ $n_rows = $session->map_table ($columns, \&walk_function);
 <pre>
 my $trap_receiver = "netman.noc";
 my $trap_community = "SNMP_Traps";
-my $trap_session = SNMP_Session->open ($trap_receiver, $trap_community, 162);
+my $trap_session = SNMP_Session-&gt;open ($trap_receiver, $trap_community, 162);
 my $myIpAddress = ...;
 my $start_time = time;
 
@@ -367,7 +367,7 @@ sub link_down_trap ($) {
   my @myOID = ( 1,3,6,1,4,1,2946,0,8,15 );
 
   warn "Sending trap failed"
-    unless $trap_session->trap_request_send (encode_oid (@myOID),
+    unless $trap_session-&gt;trap_request_send (encode_oid (@myOID),
 					     encode_ip_address ($myIpAddress),
 					     encode_int ($genericTrap),
 					     encode_int ($specificTrap),
@@ -388,18 +388,18 @@ sub link_down_trap ($) {
 </p>
 
 <pre>
-my $trap_session = SNMP_Session->open_trap_session ()
+my $trap_session = SNMP_Session-&gt;open_trap_session ()
   || die "cannot open trap session";
-my ($trap, $sender_addr, $sender_port) = $trap_session->receive_trap ()
+my ($trap, $sender_addr, $sender_port) = $trap_session-&gt;receive_trap ()
   || die "cannot receive trap";
 my ($community, $enterprise, $agent,
     $generic, $specific, $sysUptime, @bindings)
-  = $session->decode_trap_request ($trap)
+  = $session-&gt;decode_trap_request ($trap)
     || die "cannot decode trap received"
 ...
 foreach $binding (@bindings) {
     my ($key, $value) = decode_by_template ("%O%@");
-    print BER::pretty_oid ($key)," => ",pretty_print ($value),"\n";
+    print BER::pretty_oid ($key)," =&gt; ",pretty_print ($value),"\n";
 }
 </pre>
 
@@ -443,10 +443,15 @@ foreach $binding (@bindings) {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19980701
+19980716
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
+
+<A HREF="http://validator.w3.org/"><IMG ALIGN=RIGHT BORDER=0
+     SRC="http://validator.w3.org/images/vh40.gif"
+     ALT="Valid HTML 4.0!" HEIGHT=31 WIDTH=88></A>
+
 </ADDRESS>
 
 </BODY>
