--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <P> <A
  HREF="http://www.switch.ch/misc/leinen/snmp/perl/snmp.tar.gz">This
- archive</A> contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
- <tt>BER.pm</tt>, which, when used together, provide rudimentary
- access to remote SNMP (v1) agents. </P>
+ archive</A> (also available via <a
+ href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">FTP</a>)
+ contains Perl 5 modules <tt>SNMP_Session.pm</tt> and <tt>BER.pm</tt>,
+ which, when used together, provide rudimentary access to remote SNMP
+ (v1) agents. </P>
 
 <H2>Features</H2>
 
@@ -443,7 +445,7 @@ foreach $binding (@bindings) {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19980716
+19980810
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
