--- a/trunk/index.html
+++ b/trunk/index.html
@@ -28,6 +28,22 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
  href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">ftp://ftp.switch.ch/software/sources/network/snmp/perl/</a>.
  </P>
 
+<p> <IMG SRC="http://www.switch.ch/img/new_icon.gif" ALT="NEW:"
+WIDTH="31" HEIGHT="12" BORDER="0">The library is featured in the book
+<em><a href="http://www.oreilly.com/catalog/esnmp/">Essential
+SNMP</a></em> by Douglas R. Mauro and Kevin J. Schmidt, July 2001,
+O'Reilly &amp; Associates, ISBN: 0-59600020-0.  You can buy it on-line
+at <a
+href="http://www.amazon.com/exec/obidos/ASIN/0596000200/simonleinensbook"><img
+border=0 width=90 height=29 align="middle"
+src="http://www.switch.ch/misc/leinen/images/amazon/90X29-w-logo.gif"
+alt="Amazon.com"></a> <a
+href="http://www.amazon.de/exec/obidos/ASIN/0596000200/simonleinensbo0d"><img
+align="middle"
+src="http://www.switch.ch/misc/leinen/images/amazon/w_90x31.gif"
+width=90 height=31 border="0" alt="In Partnerschaft mit
+Amazon.de"></a>. </p>
+
 <H2>Features</H2>
 
 <P> This module differs from existing SNMP packages in that it is
@@ -368,7 +384,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20010410
+20011114
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
