--- a/trunk/faq.html
+++ b/trunk/faq.html
@@ -36,13 +36,9 @@ to be modified (I think it should be changed, rather than further
 extended, because it already looks too ugly because of its multiple
 extensions. </p>
 
-<p> For the target syntax, one should probably look at the proposed
-SNMP URI syntax (<a
-href="http://www.ietf.org/internet-drafts/draft-black-snmp-uri-09.txt"><tt>draft-black-snmp-uri-09.txt</tt></a>
-- this is <a
-href="http://www.rfc-editor.org/queue.html#black-snmp-uri">in the
-RFC&nbsp;Editor Queue</a>, so it should be published as an RFC at some
-point in the future with few modifications). </p>
+<p> For the target syntax, one should probably look at the SNMP URI
+syntax (<a
+href="ftp://ftp.rfc-editor.org/in-notes/rfc4088.txt"><tt>RFC&nbsp;4088</tt></a>. </p>
 
 <p> Anther issue with SNMPv3 is that it uses engine IDs, which are
 usually "discovered" using a well-defined discovery mechanism.  It
@@ -71,7 +67,7 @@ them. </p>
 
 <hr>
 <!-- hhmts start -->
-2005/01/21 13:19:55
+2005/06/07  9:00:44
 <!-- hhmts end -->
 <address>
 
